2021-04-21 Riccardo Mottola <rm@gnu.org>

	* DBFileWriter.m
	Now that GNUstep supports getting a BOM for an empty string, simplify
	the code which dind't even work. Also, take in account of the BOM
	length and skip it when writing.

2021-04-17 Riccardo Mottola <rm@gnu.org>

	* DBSObject.h
	* DBSObject.m
	Add getter for the DBSoap interface.

2021-04-17 Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
	* DBSoap.m
	* DBSoapCSV.h
	* DBSoapCSV.m
	Allow to set and use runAssignmentRules, init to NO.

2021-02-18 Riccardo Mottola <rm@gnu.org>

	* DBSoap+Selecting.m: _query
	Actually invoke correct query or queryAll method.

2020-08-28 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	* DBSoap.h
	Remove http support, no longer supported by salesforce.com

2020-05-29 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	split extractQueryRecord from extractQueryRecords and start extracting all sub-objects into DBSObjects, not just the top-level.

2020-05-23 Riccardo Mottola <rm@gnu.org>

	* DBCSVWriter.m
	Try to extract arrays which have a single element.

2020-05-22 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Unpack nested queries and extract list of SObjects.

2020-05-22 Riccardo Mottola <rm@gnu.org>

	* DBFileWriter.h
	* DBFileWriter.m
	new formatSObject: method for formatting specific SObject complex object.

2020-02-12 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
	Initialize correctly dbSoap object with batch size.

2019-11-24 Riccardo Mottola <rm@gnu.org>

	* DBSoap+Creating.m
	* DBSoap+Updating.m
	* DBSoap.h
	* DBSoap.m
	Provide means for applying assignment ruleson insert/update (currently
	defaulted to yes)

2019-06-26 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
	Do not use autorelease

2019-06-19 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
        Fix autorelease issues inside the loop with Query Locator.

        * DBSoap+Selecting.m
        Clean up memory management of GWSService a little.

2019-06-18 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m